# ML_pytorch

./: .gitignore  DNN_input_lists_ggF_VBF.py  ML_pytorch_Tiziano.yml  ML_pytorch_env.yml  README.md  dataset.py  pyproject.toml  requirements.txt  run_batch_of_20.py  run_batch_of_20.sh  run_batch_of_5.sh  setup.sh  train.py
configs/: DNN_AN_bkg_reweighting.yml  DNN_AN_bkg_reweighting_1epoch.yml  DNN_AN_bkg_reweighting_EraC.yml  DNN_AN_bkg_reweighting_NoDropout_NoBatchNorm.yml  DNN_Run2_AN_bkg_reweighting.yml  DNN_bkg_reweighting.yml  DNN_config_ggF_VBF.yml  DNN_config_ggF_VBF_SemiTightMjj.yml  DNN_config_ggF_VBF_SemiTightPt.yml  DNN_config_ggF_VBF_globalVariables.yml  DNN_config_ggF_VBFallVariablesLooseMjj.yml  DNN_config_ggF_VBFallVariablesLoosePt.yml  DNN_config_random_classifier_ggF_VBF.yml  DNN_config_random_classifier_ggF_VBF2.yml  DNN_custom_reweighting.yml  DNN_input_lists.py  DNN_input_lists_ggF_VBF.py  DNN_input_lists_ggF_VBF.yml  default_configs.yml  example_DNN_config_ggF_VBF.yml
jobs/: rerun_some_jobs.sh  run_20_trainings_in_4_parallel.sh  run_batch_of_20.sh  run_batch_of_5.sh  run_sig_bkg_classifier.sh  setup.sh  setup_spanet_baseline.sh  setup_spanet_ptvary.sh
models/: DNN_AN_reweight_model.py  DNN_model.py  DNN_reweight_model.py
notebooks/: get_output_from_onnx.ipynb
roc_curve/: roc_data.txt  roc_data_m100.txt
scripts/: args_train.py  dataset.py  early_stopper.py  learning_rate_schedules.py  plot_history.py  setup_logger.py  sig_bkg_eval.py  sig_bkg_histos.py  tools.py  train.py
simple/: example_training.py  simple_training.py
(+189 files in other folders)
